--- a/src/pages/Article.module.css
+++ b/src/pages/Article.module.css
@@ -4,11 +4,17 @@ article {
   -webkit-text-size-adjust: 100%;
   margin: 0;
   color: #c9d1d9;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
-    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
   font-size: 16px;
   line-height: 1.5;
   word-wrap: break-word;
+}
+
+:global(.dark) article {
+  --border-color: rgb(38, 38, 38);
+}
+
+:global(.light) article {
+  --border-color: #0f766e;
 }
 
 article .octicon {
@@ -76,7 +82,7 @@ article h1 {
   font-weight: 600;
   padding-bottom: 0.3em;
   font-size: 2em;
-  border-bottom: 1px solid #21262d;
+  border-bottom: 1px solid var(--border-color);
 }
 
 article mark {
@@ -127,7 +133,7 @@ article hr {
   box-sizing: content-box;
   overflow: hidden;
   background: transparent;
-  border-bottom: 1px solid #21262d;
+  border-bottom: 1px solid var(--border-color);
   height: 0.25em;
   padding: 0;
   margin: 24px 0;
@@ -262,7 +268,7 @@ article h2 {
   font-weight: 600;
   padding-bottom: 0.3em;
   font-size: 1.5em;
-  border-bottom: 1px solid #21262d;
+  border-bottom: 1px solid var(--border-color);
 }
 
 article h3 {
@@ -673,7 +679,7 @@ article table td {
 
 article table tr {
   background-color: #0d1117;
-  border-top: 1px solid #21262d;
+  border-top: 1px solid var(--border-color);
 }
 
 article table tr:nth-child(2n) {
@@ -941,4 +947,12 @@ article .contains-task-list:dir(rtl) .task-list-item-checkbox {
 
 article ::-webkit-calendar-picker-indicator {
   filter: invert(50%);
+}
+
+article * {
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
+    backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
